# protoc-gen-openapiv2

./: .gitignore  .gitmodules  README.md  Readme.md  buf.gen.openapiv2.yaml  buf.gen.yaml  gen-openapi-proto.sh  gen-openapi-protos.sh  setup.cfg
