[metadata]
name = grpc-gateway-protoc-gen-openapiv2
version = 0.1.0
author = HackEDU
author_email = noah@hackedu.io
description = Provides the missing pieces for gRPC Gateway.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/hack-edu/py_protoc_gen_openapiv2
project_urls =
    Bug Tracker = https://github.com/hack-edu/py_protoc_gen_openapiv2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = gen
packages = protoc_gen_openapiv2/options
python_requires = >=3.6
install_requires =
    googleapis-common-protos
