[metadata]
name = protoc-gen-openapiv2
version = 0.0.1
author = eapolinario
author_email = eapolinario@union.ai
description = Provides the missing pieces for gRPC Gateway.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/unionai-oss/protoc-gen-openapiv2
project_urls =
    Bug Tracker = https://github.com/unionai-oss/protoc-gen-openapiv2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = gen
packages = protoc_gen_openapiv2/options
python_requires = >=3.6
install_requires =
    googleapis-common-protos
    protobuf>=4.21.0
